--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -21,8 +21,7 @@ jobs:
       run: |
         npm install
         npm ci
-        npm run build --if-present
-        npm test
+        npm run start
       env:
         CI: true
         port: 5566
