added gh-pages with keys code

--- a/devUI/package.json
+++ b/devUI/package.json
@@ -2,6 +2,8 @@
   "name": "devui",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://geekyorion.github.io/devSocialMedia",
+  "description": "Social media app for developers",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
@@ -21,7 +23,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -38,5 +42,8 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:5000/"
+  "proxy": "http://localhost:5000/",
+  "devDependencies": {
+    "gh-pages": "^3.1.0"
+  }
 }
