remove home page for heroku

--- a/devUI/package.json
+++ b/devUI/package.json
@@ -2,7 +2,7 @@
   "name": "devui",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://geekyorion.github.io/devSocialMedia",
+  "homepage": "/",
   "description": "Social media app for developers",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
