--- a/devUI/package.json
+++ b/devUI/package.json
@@ -42,7 +42,7 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:5000/",
+  "proxy": "https://dev-social-media-server.herokuapp.com/",
   "devDependencies": {
     "gh-pages": "^3.1.0"
   }
