--- a/.github/workflows/gitDeploy.js.yml
+++ b/.github/workflows/gitDeploy.js.yml
@@ -13,10 +13,10 @@ jobs:
       - name: Install and Build 🔧 # This example project is built using npm and outputs the result to the 'build' folder. Replace with the commands required to build your project, or remove this step entirely if your site is pre-built.
         run: |
           npm install --prefix devUI
-          npm run build --prefix devUI
+          npm run deploy --prefix devUI
 
       - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@4.1.4
         with:
           branch: gh-pages # The branch the action should deploy to.
-          folder: build --prefix devUI # The folder the action should deploy.
+          folder: ./devUI/build # The folder the action should deploy.
